# filetrace

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  compass.yml
.knowledge/: .knowledge.json  CMakeLists.txt.json  LICENSE  LICENSE.json  README.md  README.md.json  README.md.json.json  _app_data_T0002_43057_Kavia-ai_filetrace_README.md  _app_data_T0002_43057_Kavia-ai_filetrace_src_directory_tree.hpp  _app_data_T0002_43057_Kavia-ai_filetrace_src_html_generator.hpp  _app_data_T0002_43057_Kavia-ai_filetrace_src_logger.hpp  _app_data_T0002_43057_Kavia-ai_filetrace_src_main.cpp  _app_data_T0002_43057_Kavia-ai_filetrace_src_path_utils.hpp  _app_data_T0002_43057_Kavia-ai_filetrace_test.py  _app_data_T0002_43057_Kavia-ai_filetrace_tests_test_file_monitoring.cpp  _app_data_T0002_43057_Kavia-ai_filetrace_tests_test_logger.cpp  _app_data_T0002_43057_Kavia-ai_filetrace_tests_test_process_hierarchy.cpp  _app_data_T0002_43057_Kavia-ai_filetrace_tests_test_thread_termination.cpp  _app_data_T0002_43087_Kavia-ai_filetrace_README.md  _app_data_T0002_43087_Kavia-ai_filetrace_src_directory_tree.hpp  _app_data_T0002_43087_Kavia-ai_filetrace_src_html_generator.hpp  _app_data_T0002_43087_Kavia-ai_filetrace_src_logger.hpp  _app_data_T0002_43087_Kavia-ai_filetrace_src_main.cpp  _app_data_T0002_43087_Kavia-ai_filetrace_src_path_utils.hpp  _app_data_T0002_43087_Kavia-ai_filetrace_test.py  _app_data_T0002_43087_Kavia-ai_filetrace_tests_test_file_monitoring.cpp  _app_data_T0002_43087_Kavia-ai_filetrace_tests_test_logger.cpp  _app_data_T0002_43087_Kavia-ai_filetrace_tests_test_process_hierarchy.cpp  (+62 more)
tests/: CMakeLists.txt  test_file_monitoring.cpp  test_logger.cpp  test_process_hierarchy.cpp  test_thread_termination.cpp
(+7 files in other folders)
